--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,700&display=swap");
+
 html,
 body {
+  background-color: #ffc300;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -11,6 +14,23 @@ a {
   text-decoration: none;
 }
 
+/* Colors */
+.colourWhite {
+  color: #ffffff;
+}
+
+/* Layout */
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
+}
+
+.flex {
+  display: flex;
+}
+
+/* List Bullet Point remover */
+ul li {
+  list-style-type: none;
 }
