--- a/styles/people/peoplePersonal.module.css
+++ b/styles/people/peoplePersonal.module.css
@@ -1,11 +1,42 @@
 .mainContainer {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
   background-color: #e5e5e5;
-  margin: 50px;
   padding: 50px;
-  height: 80vh;
+  max-width: 50%;
+  display: flex;
+  flex-direction: column;
   border-radius: 50px;
+  font-size: larger;
 }
 
 .avatar {
+  margin-right: 50px;
+}
+
+.introContainer {
+  margin-left: 50px;
+  display: flex;
+  padding-bottom: 50px;
+}
+
+.addressContainer {
+  padding: 50px;
+}
+
+.companyContainer {
+  display: flex;
+  margin-left: 50px;
+  margin-top: 20px;
+}
+
+.companyAvatar {
   border-radius: 50%;
+  margin-right: 50px;
 }
