--- a/styles/home/Home.module.css
+++ b/styles/home/Home.module.css
@@ -3,24 +3,22 @@
   align-items: center;
 }
 
-.home {
-  height: 100vh;
-}
-
 .humanImg {
   width: 100px;
 }
 
-.imageContainer {
-  position: absolute;
-  width: 100vw;
+.humanContainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  flex-direction: column;
+  font-weight: 500;
+  height: 80vh;
 }
 
-.contentContainer {
-  height: 100%;
-  width: 70%;
-}
-
-.contentContainer p {
-  font-size: xx-large;
+.btn {
+  margin-top: 30px;
+  font-size: 30px;
 }
