--- a/styles/people/people.module.css
+++ b/styles/people/people.module.css
@@ -1,4 +1,22 @@
 .mainContainer {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(1, auto);
+}
+
+@media (min-width: 750px) {
+  .mainContainer {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+
+@media (min-width: 1100px) {
+  .mainContainer {
+    grid-template-columns: repeat(3, auto);
+  }
+}
+
+@media (min-width: 1400px) {
+  .mainContainer {
+    grid-template-columns: repeat(4, auto);
+  }
 }
