--- a/styles/people/peoplePersonal.module.css
+++ b/styles/people/peoplePersonal.module.css
@@ -9,7 +9,7 @@
 .container {
   background-color: #e5e5e5;
   padding: 50px;
-  max-width: 50%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   border-radius: 50px;
@@ -23,6 +23,7 @@
 .introContainer {
   margin-left: 50px;
   display: flex;
+  flex-direction: column;
   padding-bottom: 50px;
 }
 
@@ -32,6 +33,7 @@
 
 .companyContainer {
   display: flex;
+  flex-direction: column;
   margin-left: 50px;
   margin-top: 20px;
 }
@@ -39,4 +41,14 @@
 .companyAvatar {
   border-radius: 50%;
   margin-right: 50px;
+}
+
+@media (min-width: 480px) {
+  .companyContainer {
+    flex-direction: row;
+  }
+
+  .introContainer {
+    flex-direction: row;
+  }
 }
